# pkg/gen/cloud/v1/cloud.swagger.json
@@ -17,7 +17,16 @@
   ],
   "paths": {},
   "definitions": {
-    "googlerpcStatus": {
+    "protobufAny": {
+      "type": "object",
+      "properties": {
+        "@type": {
+          "type": "string"
+        }
+      },
+      "additionalProperties": {}
+    },
+    "rpcStatus": {
       "type": "object",
       "properties": {
         "code": {
@@ -35,41 +44,6 @@
           }
         }
       }
-    },
-    "protobufAny": {
-      "type": "object",
-      "properties": {
-        "@type": {
-          "type": "string"
-        }
-      },
-      "additionalProperties": {}
-    },
-    "v1CommandResult": {
-      "type": "object",
-      "properties": {
-        "commandId": {
-          "type": "string",
-          "title": "Unique identifier of the executed command"
-        },
-        "result": {
-          "type": "string",
-          "title": "Result of the command execution"
-        },
-        "status": {
-          "$ref": "#/definitions/v1CommandResultStatus"
-        }
-      },
-      "title": "CommandResult message for returning command execution results"
-    },
-    "v1CommandResultStatus": {
-      "type": "string",
-      "enum": [
-        "SUCCESS",
-        "FAILURE"
-      ],
-      "default": "SUCCESS",
-      "title": "Status of the command execution"
     },
     "v1CreateTaskResponse": {
       "type": "object",
@@ -133,28 +107,17 @@
       },
       "title": "Message for Task Payload"
     },
-    "v1RunCommand": {
-      "type": "object",
-      "properties": {
-        "commandId": {
-          "type": "string",
-          "title": "Unique identifier for the command"
-        },
-        "command": {
-          "type": "string",
-          "title": "The command to be executed"
-        }
-      },
-      "title": "RunCommand message for executing commands"
-    },
     "v1StreamResponse": {
       "type": "object",
       "properties": {
         "heartbeat": {
           "$ref": "#/definitions/v1Heartbeat"
         },
-        "commandResult": {
-          "$ref": "#/definitions/v1CommandResult"
+        "workAssignment": {
+          "$ref": "#/definitions/v1WorkAssignment"
+        },
+        "updateTaskStatus": {
+          "$ref": "#/definitions/v1UpdateTaskStatusRequest"
         }
       },
       "title": "Message for stream responses"
@@ -254,6 +217,40 @@
       "default": "QUEUED",
       "description": "- QUEUED: Task is in the queue, waiting to be processed\n - RUNNING: Task is currently being executed\n - FAILED: Task encountered an error and failed to complete\n - SUCCEEDED: Task completed successfully\n - UNKNOWN: Task status cannot be determined\n - ALL: Task status cannot be determined",
       "title": "Enum for Task statuses"
+    },
+    "v1UpdateTaskStatusRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Unique identifier for the task. Must be \u003e= 0."
+        },
+        "status": {
+          "$ref": "#/definitions/v1TaskStatusEnum",
+          "description": "New status for the task, must be one of the defined statuses."
+        },
+        "message": {
+          "type": "string",
+          "description": "Additional message about the status update. Maximum length of 2000 characters."
+        }
+      },
+      "title": "Message for Task status update request"
+    },
+    "v1WorkAssignment": {
+      "type": "object",
+      "properties": {
+        "assignmentId": {
+          "type": "string",
+          "format": "int64",
+          "title": "Unique identifier for the assignment"
+        },
+        "task": {
+          "$ref": "#/definitions/v1Task",
+          "title": "The task to be executed"
+        }
+      },
+      "title": "Message for work assignments"
     }
   }
 }
